# skiatext

./: skiatext.podspec
examples/android/: .gitignore
examples/android/SkiaTextDemo/: settings.gradle
examples/android/SkiaTextDemo/app/: build.gradle
examples/android/SkiaTextDemo/app/src/androidTest/java/com/lvpengwei/skiatextdemo/: ExampleInstrumentedTest.java
examples/android/SkiaTextDemo/app/src/main/: AndroidManifest.xml
examples/android/SkiaTextDemo/app/src/main/java/com/lvpengwei/skiatextdemo/: MainActivity.java
examples/android/SkiaTextDemo/app/src/main/res/layout/: activity_main.xml
examples/android/SkiaTextDemo/app/src/main/res/values/: strings.xml
examples/android/SkiaTextDemo/app/src/test/java/com/lvpengwei/skiatextdemo/: ExampleUnitTest.java
examples/android/SkiaTextDemo/skiatext/: CMakeLists.txt  build.gradle
examples/android/SkiaTextDemo/skiatext/src/androidTest/java/com/lvpengwei/skiatext/: ExampleInstrumentedTest.java
examples/android/SkiaTextDemo/skiatext/src/main/: AndroidManifest.xml
examples/android/SkiaTextDemo/skiatext/src/main/java/com/lvpengwei/skiatext/: SkiaRender.java  SkiaSurface.java  SkiaView.java
examples/android/SkiaTextDemo/skiatext/src/main/java/cpp/jni/: GPUContext.cpp  GPUContext.h  GPUSurface.cpp  GPUSurface.h  JSkiaRender.cpp  JSkiaSurface.cpp
examples/android/SkiaTextDemo/skiatext/src/main/res/values/: strings.xml
examples/android/SkiaTextDemo/skiatext/src/test/java/com/lvpengwei/skiatext/: ExampleUnitTest.java
examples/ios/SkiaTextDemo/: Podfile
examples/ios/SkiaTextDemo/SkiaTextDemo/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.m  main.m
examples/ios/SkiaTextDemo/SkiaTextDemo.xcodeproj/: project.pbxproj
examples/ios/SkiaTextDemo/SkiaTextDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
examples/ios/SkiaTextDemo/SkiaTextDemo.xcworkspace/: contents.xcworkspacedata
examples/ios/SkiaTextDemo/SkiaTextDemo/Base.lproj/: Main.storyboard
examples/ios/SkiaTextDemo/SkiaTextDemo/Classes/: SkiaLayer.h  SkiaLayer.mm  SkiaView.h  SkiaView.mm
include/: skiatext.h
src/platform/ios/: Render.h  Render.m  SkiaTextLayer.h  SkiaTextLayer.m  Surface.h  Surface.m
src/platform/ios/private/: GPUSurface.h  GPUSurface.mm  RenderImpl.h  RenderImpl.mm  SurfaceImpl.h  SurfaceImpl.mm
src/rendering/: Render.cpp  Surface.cpp
